Fix alignment

--- a/twitter-emulation-spring-mvc-java/src/main/webapp/resources/style.css
+++ b/twitter-emulation-spring-mvc-java/src/main/webapp/resources/style.css
@@ -7,13 +7,11 @@ div.webPage {
     margin: 0 auto;
 }
 
-div.centered
-{
+div.centered {
     text-align: center;
 }
 
-div.centered table
-{
+table.centered {
     margin: 0 auto;
     text-align: left;
 }
